Preliminary cleanup for projects UI. #22

--- a/app/views/projects/_location.html.erb
+++ b/app/views/projects/_location.html.erb
@@ -1,4 +1,4 @@
-<span id="location_<%= location.id %>" class="well well-sm location">
+<span id="location_<%= location.id %>" class="location">
   <span class="location-name"><%= location.name %></span>
   <span class="location-city"><%= location.city %></span>
   <span class="location-state"><%= location.state %></span>
