--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -6,10 +6,14 @@
             <% end %>
           </ul>
      <% end %>
-     <%= f.text_area :text, {:placeholder => 'Comment', :rows => 1} %>
+    <div class="form-group">
+        <%= f.text_area :text, {:placeholder => 'Comment', :class => 'form-control', :rows => 3} %>
+    </div>
+    <div class="checkbox">
      <%= f.label :private do %>
           <%= f.check_box :private %>
           Private?
      <% end %>
+    </div>
      <%= f.submit 'Submit', :class => 'btn btn-default' %>
 <% end %>
