Removed max width from idea. #22

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -65,7 +65,7 @@ hr:after {
   .popover {
     position: relative;
     display: block;
-    max-width: 450px;
+    max-width: none;
     -webkit-box-shadow: none;
     box-shadow: none;
     border-color: #efefef;
