--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -19,7 +19,7 @@
 </ul>
 
 <br/>
-<div class="btn-group" style="width:100%;">
+<div class="btn-group" style="width:100%; margin-top: 50px;">
   <%= render partial: 'projects/phase', :collection => @project.phases, :as => :phase %>
 </div>
 <br/>
