--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,8 +2,9 @@
 <div class="add">
   <%= link_to 'New User', new_user_path, {class: 'btn btn-default'}  %>
 </div>
+
 <hr>
-<div id="users">
+
+<ul class="users list-group list-unstyled">
   <%= render partial: 'user_box', :collection => @users, :as => :user %>
-</div>
-<hr>
+</ul>
