--- a/app/views/users/_user_box.html.erb
+++ b/app/views/users/_user_box.html.erb
@@ -1,6 +1,3 @@
-<div class="user well well-sm">
-  <div class="user-name">
-    <%= link_to "#{user.first_name} #{user.last_name}", user %>
-  </div>
-</div>
-<hr>
+<li class="user list-group-item">
+  <h5 class="user-name"><%= link_to "#{user.first_name} #{user.last_name}", user %></h5>
+</li>
