--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -6,32 +6,32 @@
     <div class="form-group">
       <%= f.label :first_name, :class => 'col-lg-2 control-label' %>
       <div class="col-md-3">
-        <%= f.text_field :first_name, :autofocus => true, :class => 'form-control' %>
+        <%= f.text_field :first_name, :autofocus => true, :class => 'form-control', :placeholder => 'First name' %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :last_name, :class => 'col-lg-2 control-label' %>
       <div class="col-md-3">
-        <%= f.text_field :last_name, :class => 'form-control' %>
+        <%= f.text_field :last_name, :class => 'form-control', :placeholder => 'Last name' %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :email, :class => 'col-lg-2 control-label' %>
       <div class="col-md-3">
-        <%= f.email_field :email, :class => 'form-control', :type => 'email' %>
+        <%= f.email_field :email, :class => 'form-control', :type => 'email', :placeholder => 'Email' %>
       </div>
     </div>
     <div class="form-group">
       <%= f.label :password, :class => 'col-lg-2 control-label' %>
       <div class="col-md-3">
-        <%= f.password_field :password, :class => 'form-control' %>
+        <%= f.password_field :password, :class => 'form-control', :placeholder => 'Password' %>
       </div>
     </div>
 
     <div class="form-group">
       <%= f.label :password_confirmation, :class => 'col-lg-2 control-label' %>
       <div class="col-md-3">
-        <%= f.password_field :password_confirmation, :class => 'form-control' %>
+        <%= f.password_field :password_confirmation, :class => 'form-control', :placeholder => 'Confirmation' %>
       </div>
     </div>
 
