Updated page footer

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,6 +23,10 @@ h3 > .badge {
   margin-bottom: 0;
 }
 
+.navbar {
+  margin-bottom: 0;
+}
+
 #whitespace-is {
   max-width: 900px;
   margin-right: auto;
