--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,76 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : 'Whitespace' %></title>
-    <%= csrf_meta_tags %>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><%= content_for?(:title) ? yield(:title) : 'Whitespace' %></title>
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag "bootstrap_and_overrides", :media => "all" %>
-    <%= stylesheet_link_tag "application", :media => "all" %>
-    <%= stylesheet_link_tag params[:controller] if Whitespace::Application.assets.find_asset("#{params[:controller]}.css") %>
-    <%= stylesheet_link_tag "#{params[:controller]}/#{params[:action]}.css" if Whitespace::Application.assets.find_asset("#{params[:controller]}/#{params[:action]}.css") %>
+  <%= stylesheet_link_tag "bootstrap_and_overrides", :media => "all" %>
+  <%= stylesheet_link_tag "application", :media => "all" %>
+  <%= stylesheet_link_tag params[:controller] if Whitespace::Application.assets.find_asset("#{params[:controller]}.css") %>
+  <%= stylesheet_link_tag "#{params[:controller]}/#{params[:action]}.css" if Whitespace::Application.assets.find_asset("#{params[:controller]}/#{params[:action]}.css") %>
 
-    <%= favicon_link_tag '/favicon.ico', :rel => 'shortcut icon' %>
-  </head>
-  <body>
-      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex8-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Whitespace</a>
-        </div>
+  <%= favicon_link_tag '/favicon.ico', :rel => 'shortcut icon' %>
+</head>
+<body>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex8-collapse">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="/">Whitespace</a>
+  </div>
 
-        <div class="collapse navbar-collapse navbar-ex8-collapse">
-          <ul class="nav navbar-nav">
-            <li><%= link_to 'Projects', projects_path  %></li>
-            <li><%= link_to 'Users', users_path  %></li>
-          </ul>
+  <div class="collapse navbar-collapse navbar-ex8-collapse">
+    <ul class="nav navbar-nav">
+      <li><%= link_to 'Projects', projects_path  %></li>
+      <li><%= link_to 'Users', users_path  %></li>
+    </ul>
 
-          <ul class="nav navbar-nav navbar-right">
-            <!--<li><button type="button" class="btn btn-default navbar-btn">Sign in</button></li>-->
-            <% if user_signed_in? %>
-                <li><%= link_to current_user.email, user_path(current_user) %></li>
-                <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
-            <% else %>
-                <li><%= link_to 'Login', new_user_session_path %></li>
-                <li><%= link_to 'Signup', new_user_registration_path %></li>
-            <% end %>
-          </ul>
-        </div>
-      </nav>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <%= bootstrap_flash %>
-          <%= yield %>
-        </div>
-      </div>
-
-      <hr>
-
-      <footer>
-        <p class="pull-left">&copy; Whitespace Initiatives</p>
-        <ul class="list-inline pull-right">
-          <li><%= link_to "About", '/about'  %></li>
-          <li><%= link_to "Contact", '/contact'  %></li>
-          <li><%= link_to "Help", '/help'  %></li>
-          <li><%= link_to "Problem", '/problem'  %></li>
-        </ul>
-      </footer>
+    <ul class="nav navbar-nav navbar-right">
+      <% if user_signed_in? %>
+        <li><%= link_to current_user.email, user_path(current_user) %></li>
+        <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
+      <% else %>
+        <li><%= link_to 'Login', new_user_session_path %></li>
+        <li><%= link_to 'Signup', new_user_registration_path %></li>
+      <% end %>
+    </ul>
+  </div>
+</nav>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <%= bootstrap_flash %>
+      <%= yield %>
     </div>
-
-    <%= javascript_include_tag 'application' %>
-    <%= javascript_include_tag params[:controller] if Whitespace::Application.assets.find_asset("#{params[:controller]}.js") %>
-    <%= javascript_include_tag "#{params[:controller]}/#{params[:action]}.js" if Whitespace::Application.assets.find_asset("#{params[:controller]}/#{params[:action]}.js") %>
-    <!--[if lt IE 9]>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
-    <![endif]-->
-  </body>
+  </div>
+</div>
+<nav class="navbar navbar-default" role="navigation">
+  <ul class="nav navbar-nav navbar-left">
+    <li></li>
+    <li><p class="navbar-text">&copy; Whitespace Initiatives</p></li>
+  </ul>
+  <ul class="nav navbar-nav navbar-right">
+    <li><%= link_to "About", '/about'  %></li>
+    <li><%= link_to "Contact", '/contact'  %></li>
+    <li><%= link_to "Help", '/help'  %></li>
+    <li><%= link_to "Problem", '/problem'  %></li>
+  </ul>
+</nav>
+<%= javascript_include_tag 'application' %>
+<%= javascript_include_tag params[:controller] if Whitespace::Application.assets.find_asset("#{params[:controller]}.js") %>
+<%= javascript_include_tag "#{params[:controller]}/#{params[:action]}.js" if Whitespace::Application.assets.find_asset("#{params[:controller]}/#{params[:action]}.js") %>
+<!--[if lt IE 9]>
+<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
+<![endif]-->
+</body>
 </html>
