--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,6 @@
-<h2>Projects</h2>
+<ol class="breadcrumb">
+  <li>Projects</li>
+</ol>
 <% if can? :create, Project %>
 <div class="add">
   <%= link_to 'New Project', new_project_path, {class: 'btn btn-default'} %>
