--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for record, :remote => true, :html => {id: 'comment-form', :class => 'form-inline'} do |f| %>
+<%= form_for @comment, :url => url, :remote => true, :html => {id: 'comment-form', :class => 'form-inline'} do |f| %>
      <% if @comment.errors.any? %>
           <ul class="errors">
             <% @comment.errors.full_messages.each do |msg| %>
