- renamed /problem page to /more-info - move carousel from /index page to /more-info page - updated links to creating new project and showing all projects - some styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,10 +57,10 @@
     <li><p class="navbar-text">&copy; Whitespace Initiatives</p></li>
   </ul>
   <ul class="nav navbar-nav navbar-right">
-    <li><%= link_to "About", '/about'  %></li>
-    <li><%= link_to "Contact", '/contact'  %></li>
-    <li><%= link_to "Help", '/help'  %></li>
-    <li><%= link_to "Problem", '/problem'  %></li>
+    <li><%= link_to "About", '/about' %></li>
+    <li><%= link_to "Contact", '/contact' %></li>
+    <li><%= link_to "Help", '/help' %></li>
+    <li><%= link_to "More Info", '/more-info' %></li>
   </ul>
 </nav>
 <%= javascript_include_tag 'application' %>
